[package]
name = "gs1"
version = "0.1.5"
description = "Library for dealing with GS1 identifiers"
license = "LGPL-3.0-or-later"
homepage = "https://github.com/russss/rust-gs1"
repository = "https://github.com/russss/rust-gs1"
readme = "README.md"
authors = ["Russ Garrett <russ@garrett.co.uk>"]
edition = "2018"

[dependencies]
num_enum = "0.4.1"
bitreader = "0.3.2"
percent-encoding = "2.1.0"
pad = "0.1.5"
hex = "0.4.0"
